ECE532_Project/RobotFPGA/microblaze/microblaze.sdk/.metadata/.plugins/org.eclipse.cdt.ui/ultrasonicTest.build.log
17:02:10 **** Auto Build of configuration Debug for project ultrasonicTest ****
make all 
'Building file: ../src/helloworld.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/helloworld.o" -I../../ultrasonicTest_bsp/microblaze_0/include -mlittle-endian -mcpu=v11.0 -mxl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.o" -o "src/helloworld.o" "../src/helloworld.c"
../src/helloworld.c:77:35: warning: initialization from incompatible pointer type [-Wincompatible-pointer-types]
 volatile unsigned int* btn_addr = (uint32_t *)(LED_BASEADDR + 0xFFFFFFFF);
                                   ^
../src/helloworld.c: In function 'main':
../src/helloworld.c:125:5: error: 'timer' undeclared (first use in this function); did you mean 'timer_t'?
     timer = 1700000 + da*100000;
     ^~~~~
     timer_t
../src/helloworld.c:125:5: note: each undeclared identifier is reported only once for each function it appears in
../src/helloworld.c:140:4: error: 'sample' undeclared (first use in this function)
    sample[0] = takeSample();
    ^~~~~~
../src/helloworld.c:140:16: warning: implicit declaration of function 'takeSample' [-Wimplicit-function-declaration]
    sample[0] = takeSample();
                ^~~~~~~~~~
../src/helloworld.c:162:4: warning: implicit declaration of function 'turnByDegree' [-Wimplicit-function-declaration]
    turnByDegree(90);
    ^~~~~~~~~~~~
../src/helloworld.c:110:25: warning: unused variable 'stop' [-Wunused-variable]
     volatile uint32_t * stop;
                         ^~~~
../src/helloworld.c:109:25: warning: unused variable 'ptr' [-Wunused-variable]
     volatile uint32_t * ptr;
                         ^~~
../src/helloworld.c:108:23: warning: unused variable 'value1' [-Wunused-variable]
     volatile uint32_t value1;
                       ^~~~~~
../src/helloworld.c:107:23: warning: unused variable 'value' [-Wunused-variable]
     volatile uint32_t value;
                       ^~~~~
../src/helloworld.c: At top level:
../src/helloworld.c:206:5: warning: data definition has no type or storage class
     cleanup_platform();
     ^~~~~~~~~~~~~~~~
../src/helloworld.c:206:5: warning: type defaults to 'int' in declaration of 'cleanup_platform' [-Wimplicit-int]
../src/helloworld.c:206:5: error: conflicting types for 'cleanup_platform'
In file included from ../src/helloworld.c:49:0:
../src/platform.h:39:6: note: previous declaration of 'cleanup_platform' was here
 void cleanup_platform();
      ^~~~~~~~~~~~~~~~
../src/helloworld.c:207:5: error: expected identifier or '(' before 'return'
     return 0;
     ^~~~~~
../src/helloworld.c:208:1: error: expected identifier or '(' before '}' token
 }
 ^
make: *** [src/subdir.mk:26: src/helloworld.o] Error 1

17:02:10 Build Finished (took 226ms)

